@@ -19,3 +19,6 @@ pyem/tmp/kmean.py
 pyem/tmp/blop.py
 pyem/tmp/
 pyem/tmp
+matcode
+../MSG
+MSG
